--- a/css/style.css
+++ b/css/style.css
@@ -274,13 +274,13 @@ body {
   }
 }
 
-.js .js-scroll {
+.js-scroll {
   opacity: 0;
   transition: .3s;
   transform: translate3d(-30px, 0, 0);
 }
 
-.js .js-scroll.ativo {
+.js-scroll.ativo {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
